@@ -2,15 +2,6 @@
 <!DOCTYPE translation-status SYSTEM "translation-status.dtd" >
 
 <translation-status>
-  <release name="gnome-1.4">
-    <group name="fifth-toe">
-      <description>FIXME: Add a good description</description>
-      <frozen/>
-    </group>
-    <group name="extras">
-      <description>FIXME: Add a good description</description>
-    </group>
-  </release>
   <release name="gnome-2.4">
     <group name="developer-libs">
       <description>GNOME developer platform. Essential software.</description>
@@ -703,44 +694,6 @@
     </version>
   </module>
   <module name="gimp">
-    <version release="gnome-1.4">
-      <component name="gimp" dir="gimp" group="fifth-toe">
-	<podir dir="po"/>
-	<potname name="gimp.pot"/>
-	<branch name="gimp-1-2"/>
-	<regenerate/>
-      </component>
-      <component name="gimp-perl" dir="gimp" group="fifth-toe">
-	<podir dir="plug-ins/perl/po"/>
-	<potname name="gimp-perl.pot"/>
-	<branch name="gimp-1-2"/>
-      </component>
-      <component name="gimp-libgimp" dir="gimp" group="fifth-toe">
-	<podir dir="po-libgimp"/>
-	<potname name="gimp.pot"/>
-	<branch name="gimp-1-2"/>
-	<regenerate/>
-      </component>
-      <component name="gimp-plugins" dir="gimp" group="fifth-toe">
-	<podir dir="po-plug-ins"/>
-	<potname name="gimp.pot"/>
-	<branch name="gimp-1-2"/>
-        <regenerate/>
-      </component>
-      <component name="gimp-script-fu" dir="gimp" group="fifth-toe">
-	<podir dir="po-script-fu"/>
-	<potname name="gimp.pot"/>
-	<branch name="gimp-1-2"/>
-        <regenerate/>
-      </component>
-      <component name="gimp-freetype" dir="gimp-freetype" group="extras">
-	<podir dir="po"/>
-	<potname name="gimp-freetype.pot"/>
-	<branch name="gimp-1-2"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
     <version release="gnome-2.6">
       <component name="gimp-freetype" dir="gimp-freetype" group="extras">
         <podir dir="po"/>
