@@ -1,5 +1,10 @@
 2004-01-18  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Removed last few bits of 1.4 translation
+	status pages.
+
+2004-01-18  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Added muine and gtk+-properties.
 
 2004-01-17  Christian Rose  <menthos@menthos.com>
